Major changes to actions and user systems

--- a/data/actions/actions.yaml
+++ b/data/actions/actions.yaml
@@ -2,170 +2,6 @@ say:
   group: basic
   label: 💬
   description: Say something
-  action_text: [You say, USER says]
-  target_text: to REF1
+  action_text: [You say, $0 says]
+  target_text: to $1
 
-smile:
-  group: emotes
-  label: 😊
-  description: Smile
-  action_text: [You smile, USER smiles]
-  target_text: [at REF1, at REF1 and REF2]
-
-pinch:
-  group: actions
-  label: 🤏
-  description: Pinch something small
-  action_text: [You pinch, USER pinches]
-  target_text: REF1
-  end_text: [ouch!, 😈, HA!]
-
-wave:
-  group: actions
-  label: 👋
-  description: Wave at someone
-  action_text: [You wave, USER waves]
-  target_text: at REF1
-
-fart:
-  group: actions
-  label: 💨
-  description: Make a stinky
-  action_text: [You fart, USER farts]
-  target_text: at REF1
-  end_text: [💨, 😵, Phew!]
-
-dice:
-  group: actions
-  label: 🎲
-  description: Roll some dice
-  action_text: [You roll a dice..., USER rolls a 🎲 and gets...]
-  end_text: [1, 2, 3, 4, 5, 6, so lucky!, 💣BOMB!, 🐼A panda...]
-
-dance:
-  group: emotes
-  label: 💃
-  description: Bust a move
-  action_text: [You dance, USER dances]
-  target_text: [with REF1, near REF1]
-  end_text: [🎵, ✨, like nobody's watching!, 🕺]
-
-giggle:
-  group: emotes
-  label: 🤭
-  description: Laugh softly
-  action_text: [You giggle, USER giggles]
-  target_text: at REF1
-  end_text: [hehe, tee-hee!, 😂]
-
-poke:
-  group: actions
-  label: 👉
-  description: Poke someone
-  action_text: [You poke, USER pokes]
-  target_text: REF1
-  end_text: [boop!, hey!, 👀, stop that!]
-
-spin:
-  group: actions
-  label: 🌀
-  description: Spin around
-  action_text: [You spin, USER spins]
-  target_text: [around REF1, with REF1]
-  end_text: [wheeee!, 😵‍💫, I'm dizzy!, ✨, 🌪️]
-
-hug:
-  group: emotes
-  label: 🤗
-  description: Give a warm hug
-  action_text: [You hug, USER hugs]
-  target_text: REF1
-  end_text: [💕, warmly, ☺️, squeeze!]
-
-wink:
-  group: emotes
-  label: 😉
-  description: Give a cheeky wink
-  action_text: [You wink, USER winks]
-  target_text: at REF1
-  end_text: [😏, sneakily, 👁️]
-
-explode:
-  group: actions
-  label: 💥
-  description: Spontaneously combust
-  action_text: [You explode, USER explodes]
-  target_text: [near REF1, in front of REF1]
-  end_text: [💥, BOOM!, 🔥, kaboom!, ashes everywhere, 💣, oops]
-
-teleport:
-  group: actions
-  label: ✨
-  description: Vanish and reappear
-  action_text: [You teleport, USER teleports]
-  target_text: [to REF1, near REF1, behind REF1]
-  end_text: [poof!!, ✨, 🌟, whoosh!, "where'd they go?", magic!]
-
-shrink:
-  group: actions
-  label: 🔬
-  description: Become tiny
-  action_text: [You shrink, USER shrinks]
-  target_text: [near REF1, in front of REF1]
-  end_text: [so smol!, 🐜, tiny!, eep!, help!]
-
-float:
-  group: actions
-  label: 🎈
-  description: Defy gravity
-  action_text: [You float, USER floats]
-  target_text: [above REF1, near REF1]
-  end_text: [🎈, wheee!, ☁️, up up and away!, ✨, I'm flying!]
-
-tornado:
-  group: actions
-  label: 🌪️
-  description: Create a mini tornado
-  action_text: [You create a tornado, USER creates a tornado]
-  target_text: near REF1, near REF1 and REF2
-  end_text: [🌪️, whoosh!, debris flying!, hold on tight!, dizzy!, ohno!!!!]
-
-play_tabletennis:
-  group: actions
-  label: 🎾
-  description: Play a game of table tennis
-  action_text: [You serve the ball, USER serves the ball]
-  target_text: to REF1
-  end_text: [🏓, smash!, score!, nice shot!, rally!, game point!,i will win😈🤑🎾🥍🏸🏓, "NOOOO I LOST😭😡🤬😟😳:("]
-
-draw:
-  group: actions
-  label: 🎨
-  description: Create a piece of art
-  action_text: [You start drawing, USER starts drawing]
-  target_text: on $1
-  end_text: [🖼️, masterpiece!, colorful!, beautiful!, wow!,cool,no way,that will make alot of muny🤑🤑🤑]
-
-sing:
-  group: actions
-  label: 🎤
-  description: Sing a song
-  action_text: [You start singing, USER starts singing]
-  target_text: for REF1
-  end_text: [🎵, la la la!, beautiful voice!, encore!,woooooooooooo!!!!!!! 🎶]
-
-color:
-  group: imagine
-  label: 🌈
-  description: Change color of something
-  action_text: [You change the color of, USER repaints]
-  target_text: REF1 and make
-  end_text: ["[[@ [[#f00 red REF1 ]] ]]", "[[@  [[#00f blue REF1 ]]", "[[@ [[#0f0 green REF1 ]]", "[[@ [[#800 purple REF1 ]]", "[[@ [[#f0f pink REF1 ]]" ]
-
-melt:
-  group: imagine
-  label: 🧊
-  description: Melt two things together
-  action_text: [You melt, $0 melts]
-  target_text: [$1, $1 and $2 into]
-  end_text: "[[@ $* ]]"
